[package]
name = "fjp"
version = "0.3.0-dev"
description = "A handy command line program to work fast and straightforward with firejail profiles."
authors = ["rusty-snake"]
edition = "2018"
readme = "README.md"
homepage = "https://rusty-snake.github.io/fjp"
repository = "https://github.com/rusty-snake/fjp"
license = "GPL-3.0-or-later"
build = "build.rs"
categories = ["command-line-utilities"]
keywords = ["firejail"]

[features]
default = []
full = ["color-backtrace"]

[dependencies]
anyhow = "1.0"
bitflags = "1.2"
lazy_static = "1"
libc = "0.2"
log = "0.4"
nix = "0.20"
termcolor = "1.1"
thiserror = "1.0"

[dependencies.clap]
version = "2"
features = [ "yaml", "wrap_help" ]

[dependencies.env_logger]
version = "0.8"
default-features = false
features = ["termcolor", "atty"]

[dependencies.color-backtrace]
version = "0.5"
optional = true

[dependencies.macros]
path = "macros"

[build-dependencies]
clap = { version = "2", default-features = false, features = [ "yaml" ] }
